# reva

./: CMakeLists.txt  Makefile  README.md  about.c  about_reva.c  conv_reva.c  dia_reva.c  flotsam.c  fold_reva.c  grid.c  grid_reva.c  reva.c  rva.h  rvaPrivate.h  spec.c  util.c
demo/: gen-bow.sh  isobow3.txt
